--- a/project/code/aluguelDeCarros/src/main/resources/static/index.html
+++ b/project/code/aluguelDeCarros/src/main/resources/static/index.html
@@ -8,7 +8,12 @@
     <p>Aluguel de carros</p>
     <a href="/criarCliente">Criar cliente</a>
 
-    <a href="/index">Index</a>
+    <a href="/readCliente">Ler clientes</a>
+
+
+    <a href="/readAgente">Ler clientes</a>
+
+    <a href="/criarAgente">Criar agentes</a>
 
     <a href="/criarAluguel">Criar aluguel</a>
 
