Pedido crari (sem enum)

--- a/project/code/aluguelDeCarros/src/main/resources/static/index.html
+++ b/project/code/aluguelDeCarros/src/main/resources/static/index.html
@@ -21,5 +21,10 @@
 
     <a href="/lerAutomovel">Ler automoveis</a>
 
+    <a href="/lerPedido">Ler pedido</a>
+
+    <a href="/criarPedido">Criar pedidos</a>
+
+
 </body>
 </html>
