Update pra ficar de acordo com uml

--- a/project/code/aluguelDeCarros/src/main/resources/static/index.html
+++ b/project/code/aluguelDeCarros/src/main/resources/static/index.html
@@ -15,13 +15,11 @@
 
     <a href="/criarAgente">Criar agentes</a>
 
-    <a href="/criarAluguel">Criar aluguel</a>
-
     <a href="/criarAutomovel">Criar automovel</a>
 
-    <a href="/lerAutomovel">Ler automoveis</a>
+    <a href="/readAutomovel">Ler automoveis</a>
 
-    <a href="/lerPedido">Ler pedido</a>
+    <a href="/readPedido">Ler pedido</a>
 
     <a href="/criarPedido">Criar pedidos</a>
 
