--- a/project/code/aluguelDeCarros/src/main/resources/static/index.html
+++ b/project/code/aluguelDeCarros/src/main/resources/static/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <p>Aluguel de carros</p>
+
+    <a href="/criarUsuario">Criar usuario</a>
+    
     <a href="/criarCliente">Criar cliente</a>
 
     <a href="/readCliente">Ler clientes</a>
@@ -14,6 +17,7 @@
     <a href="/readAgente">Ler clientes</a>
 
     <a href="/criarAgente">Criar agentes</a>
+
 
     <a href="/criarAutomovel">Criar automovel</a>
 
