--- a/project/code/aluguelDeCarros/src/main/resources/static/index.html
+++ b/project/code/aluguelDeCarros/src/main/resources/static/index.html
@@ -8,15 +8,17 @@
     <p>Aluguel de carros</p>
 
     <a href="/criarUsuario">Criar usuario</a>
+
+    <a href="/readUsuario">Ler usuario</a>
     
     <a href="/criarCliente">Criar cliente</a>
 
     <a href="/readCliente">Ler clientes</a>
 
-
-    <a href="/readAgente">Ler clientes</a>
-
     <a href="/criarAgente">Criar agentes</a>
+
+    <a href="/readAgente">Ler agente</a>
+
 
 
     <a href="/criarAutomovel">Criar automovel</a>
