--- a/project/code/aluguelDeCarros/src/main/resources/static/index.html
+++ b/project/code/aluguelDeCarros/src/main/resources/static/index.html
@@ -7,28 +7,11 @@
 <body>
     <p>Aluguel de carros</p>
 
-    <a href="/criarUsuario">Criar usuario</a>
+    <a href="./telaCliente.html">Entrar como cliente</a>
 
-    <a href="/readUsuario">Ler usuario</a>
-    
-    <a href="/criarCliente">Criar cliente</a>
+    <a href="./telaAgente.html">Entrar como agente</a>
 
-    <a href="/readCliente">Ler clientes</a>
-
-    <a href="/criarAgente">Criar agentes</a>
-
-    <a href="/readAgente">Ler agente</a>
-
-
-
-    <a href="/criarAutomovel">Criar automovel</a>
-
-    <a href="/readAutomovel">Ler automoveis</a>
-
-    <a href="/readPedido">Ler pedido</a>
-
-    <a href="/criarPedido">Criar pedidos</a>
-
+    <a href="./telaBanco.html">Entrar como banco</a>
 
 </body>
 </html>
