Botão para ir para pagina Gerenciar Pedidos

--- a/project/code/aluguelDeCarros/src/main/resources/static/telaAgente.html
+++ b/project/code/aluguelDeCarros/src/main/resources/static/telaAgente.html
@@ -9,6 +9,7 @@
     Tela do Agente
 
     <p><a href="/criarAutomovel">Criar automovel</a></p>
+    <p><a href="/readPedidoAgente">Gerenciar Pedidos</a></p>
     
 </body>
 </html>
