--- a/project/code/aluguelDeCarros/src/main/resources/static/telaCliente.html
+++ b/project/code/aluguelDeCarros/src/main/resources/static/telaCliente.html
@@ -8,5 +8,9 @@
 
     Tela do cliente
 
+    <a href="criarPedido">Criar pedido</a>
+
+    <a href="criarCliente">Novo cliente</a>
+
 </body>
 </html>
