--- a/project/code/aluguelDeCarros/src/main/resources/static/telaCliente.html
+++ b/project/code/aluguelDeCarros/src/main/resources/static/telaCliente.html
@@ -12,5 +12,9 @@
 
     <a href="criarCliente">Novo cliente</a>
 
+    <a href="readCliente">Ver clientes</a>
+
+    <a href="readPedido">Ver pedidos</a>
+
 </body>
 </html>
