eerro na criação do contrato

--- a/project/code/aluguelDeCarros/src/main/resources/static/telaBanco.html
+++ b/project/code/aluguelDeCarros/src/main/resources/static/telaBanco.html
@@ -1,12 +1,14 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head> 
-    <title>Tela do banco</title> 
+<head>
+    <title>Tela do Banco</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
 
-    Tela do Banco
-    
+Tela do Banco
+
+<p><a href="/readPedidoBanco">Gerenciar Pedidos</a></p>
+<p><a href="/">Home</a></p>
 </body>
 </html>
