--- a/project/code/aluguelDeCarros/src/main/resources/static/telaBanco.html
+++ b/project/code/aluguelDeCarros/src/main/resources/static/telaBanco.html
@@ -7,6 +7,10 @@
 <body>
 
     Tela do Banco
+
+    <a href="criarPedido">Criar pedido</a>
+
+    <a href="readPedido">Ver pedidos</a>
     
 </body>
 </html>
