criacao de contrato tentativa 2

--- a/project/code/aluguelDeCarros/src/main/resources/static/telaBanco.html
+++ b/project/code/aluguelDeCarros/src/main/resources/static/telaBanco.html
@@ -7,10 +7,7 @@
 <body>
 
     Tela do Banco
-
-    <a href="criarPedido">Criar pedido</a>
-
-    <a href="readPedido">Ver pedidos</a>
+    <a href="readPedidoBanco">Ver pedidos</a>
     
 </body>
 </html>
